2003-10-07  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Fixed the modification about error-like warnings.

2003-09-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, man/...: Added directive 'clean'.

	* src/__init__.py: Fixed the calls to 'watch_file'.

	* src/__init__.py: Handling of pdfTeX's error-like warning messages.

2003-09-26  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, man/...: Changed the semantics of watched_files a
	bit, added directive 'watch'.

	* src/__init__.py, src/modules/lhs2TeX.py: Added module 'lhs2TeX' for
	Literate Haskell support.

2003-07-31  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Fixed the reinitialization process.

2003-06-25  Emmanuel Beffara  <manu@beffara.org>

	* rubber.spec.in: Fixed the RPM spec file (patch by Oron Peled).

	* src/modules/combine.py, man/...: Added module 'combine'.

2003-04-28  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics.py: Fixed a stupid typo.

2003-04-21  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py (update_seq): Added a space in the regexp for control
	sequences.

2003-04-17  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py: Added a missing return statement.

2003-04-09  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.6 released.

2003-04-01  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/graphics.py: Added support for EPS/LaTeX figures.

	* src/modules/cweb.py: Added a conversion rule for imported CWEB
	source files, fixed the module.

	* src/cmdline.py: Added the missing call to env.make_source().

	* src/__init__.py, src/util.py: Added support for LaTeX source
	conversion rules.

	* src/modules/epsfig.py, man/...: Added support for epsfig.

2003-03-31  Emmanuel Beffara  <manu@beffara.org>

	* src/info.py: Fixed file name tracking again.

	* src/__init__.py, src/util.py, src/graphics/__init__.py: Revised the
	definition of Converter.

2003-03-27  Emmanuel Beffara  <manu@beffara.org>
